# ConcreteVision

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
docker/: .dockerignore  docker-compose.yml
src/ConcreteVision.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/damage_segmentation/datasets/: Dacl_Dataset.py
src/damage_segmentation/deployment/: export_onnx.py
src/damage_segmentation/evaluation/: evaluate.py  prepare_submission.py
src/damage_segmentation/inference/: inference.py  inference_unseen_crack.py  inference_unseen_data.py  run_inference.py
src/damage_segmentation/training/: train.py
src/damage_segmentation/utils/: utils.py
