[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ConcreteVision"
version = "0.1.0"
description = "Deep Learning Framework for Concrete Damage Segmentation"
authors = [
    {name = "Vedant Girish Dalvi"}
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "torch",
    "torchvision",
    "opencv-python",
    "numpy",
    "albumentations",
    "segmentation-models-pytorch",
    "matplotlib",
    "onnx",
    "onnxruntime"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]